修正 WS 功能 :lipstick: 修复遗失的旋转动画 :sparkles: 去除顶栏，将功能合并至其他位置 :speech_balloon: #4 增加关于无法存取 Cookie 的警告 <- @Logic-Accepted :bug: #5 修正 img 消息图片 z-index 错误的问题 <- Logic-Accepted :lipstick: 去除了消息图片居中功能 :sparkles: 增加了关闭新消息闪烁边框的选项 :sparkles: 修复了之前损坏的 WS 功能 :heavy_plus_sign: 增加依赖 js: src/workbox :sparkles: 支持了触屏左滑回复和右滑转发的功能 :bug: 修复了预览消息意外换行的问题 :sparkles: 好友群列表头像现在懒加载了，防止由于一次性加载导致的内存高占用 :bug: 修复了由于空 cookie 导致的报错 :sparkles: 增加了 png 图标和可遮罩图标用于优化 PWA :wastebasket: 删除了无用资源 :bookmark: 更新至 v1.2.7

--- a/css/chat.css
+++ b/css/chat.css
@@ -39,9 +39,13 @@ select:focus {
     outline: none;
 }
 
+.main-body {
+    transition: transform .3s;
+}
+
 .main-view {
     width: 100%;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 110px);
     padding: 20px 0;
     display: flex;
     flex-direction: column;
@@ -68,7 +72,7 @@ select:focus {
 
 .msg-view {
     flex: 1;
-    margin: 20px 0 0 0;
+    margin: 0;
     display: flex;
     flex-direction: row;
     border: 2px solid transparent;
@@ -76,7 +80,7 @@ select:focus {
 }
 .msg-view-right {
     flex: 1;
-    margin: 20px 0 0 0;
+    margin: 0;
     display: flex;
     flex-direction: row;
     border: 2px solid transparent;
@@ -86,6 +90,7 @@ select:focus {
 .msg-body {
     flex: 1;
     overflow-y: scroll;
+    overflow-x: hidden;
     padding-right: 20px;
     scroll-behavior: smooth;
 }
@@ -390,6 +395,9 @@ select:focus {
 
 .back-btn {
     display: none;
+    cursor: pointer;
+    margin-left: -10px !important;
+    margin-right: 10px !important;
 }
 
 .run-statue > div {
@@ -538,6 +546,17 @@ select:focus {
 }
 .opt-child label > div {
     background: var(--color-card-2);
+}
+
+.opt-tip {
+    font-size: 0.9rem;
+    background: var(--color-card-1);
+    margin-right: 20px;
+    border-radius: 7px;
+    text-align: center;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    color: var(--color-font-1);
 }
 
 .lis-button:focus {
